Fixed mobile display menu being overlapped by the navbar when scrolling. Removed a few of the lines Johnny marked as unnecessary. Changed all tabs to spaces. Changed the person bio to a functional component.

--- a/Server/client/src/components/people/people.css
+++ b/Server/client/src/components/people/people.css
@@ -1,13 +1,14 @@
 #people-wrapper{
-	width: 90%;
-	margin: auto;
-	height: auto;
-	display: block;
+    padding-top: 16px;
+    width: 90%;
+    margin: auto;
+    height: auto;
+    display: block;
 }
 
 .padding{
-	display: block;
-	height: 700px;
+    display: block;
+    height: 700px;
 }
 
 hr.divider{
@@ -95,46 +96,46 @@ display: block;
 }
 
 .normal-display {
-	display: block;
+    display: block;
 }
 
 .mobile-display {
-	display: none;
+    display: none;
 }
 
 @media screen and (max-width: 800px) {
   .normal-display {
-		display: none;
-	}
+        display: none;
+    }
 
   .mobile-subdisplay{
-	display: block;
-	position: relative;
-	left: 15%;
-	}
+    display: block;
+    position: relative;
+    left: 15%;
+    }
 
   .mobile-display {
-		display: block;
-		position: sticky;
-		top: 20px;
-		width: 24%;
-		float: right;
-	}
-	
+        display: block;
+        position: sticky;
+        top: 60px;
+        width: 24%;
+        float: right;
+    }
+    
   .tab button{
-		font-size: 9pt;
-		padding: 1px;
-		height: 48px;
-		text-align: center;
-		border-left: 1px solid #ccc;
-	}
-	
+        font-size: 9pt;
+        padding: 1px;
+        height: 48px;
+        text-align: center;
+        border-left: 1px solid #ccc;
+    }
+    
   .tab-details {
-		width: 83%;
-		float: none;
-		overflow-y: unset;
-		height: unset;
-	}
+        width: 83%;
+        float: none;
+        overflow-y: unset;
+        height: unset;
+    }
   
   .tab {
     width: 100%;
@@ -145,63 +146,63 @@ display: block;
   }
   
   .padding{
-	display: none;
+    display: none;
   }
   
 }
 
 .person-view-mode-teaser.terminal{
-	border-bottom:none !important;
-	}
+    border-bottom:none !important;
+    }
 
 
 
 
 .person-view-mode-teaser{
-	border-bottom:1px solid rgba(0,0,0,0.12) !important;
-	margin-bottom:20px;
-	padding-bottom:20px;
-	}
+    border-bottom:1px solid rgba(0,0,0,0.12) !important;
+    margin-bottom:20px;
+    padding-bottom:20px;
+    }
 
 .person-view-mode-teaser h2.node-title{
-	font-size:140%;
-	font-weight:600;
-	}
+    font-size:140%;
+    font-weight:600;
+    }
 
 .person-view-mode-teaser img.image-thumbnail,.person-view-mode-teaser img.image-small_thumbnail{
-		float:right;
-		margin:0 0 20px 20px;
-		width:100px;
-		height:auto;}
-		
+        float:right;
+        margin:0 0 20px 20px;
+        width:100px;
+        height:auto;}
+        
 .person-departments{
-	text-transform:uppercase;
-	font-size:85%;
-	font-family:Arial,Helvetica,sans-serif;
-	}
+    text-transform:uppercase;
+    font-size:85%;
+    font-family:Arial,Helvetica,sans-serif;
+    }
 
 .person-job-titles{
-	font-size:110%;
-	}
+    font-size:110%;
+    }
 
 .people-bio{
-	padding-top:10px;
-	}
-	
+    padding-top:10px;
+    }
+    
 .person-view-mode-teaser-contact,.person-view-mode-embed-contact{
-	padding-top:20px;
-	}
-	
+    padding-top:20px;
+    }
+    
 .person-contact-info-item{
-	white-space:nowrap;
-	}
+    white-space:nowrap;
+    }
 
 @media (max-width:480px){
-	.person-view-mode-teaser-contact .person-contact-info-item{
-		display:block;
-		font-size:85%;
-	}
-	.person-view-mode-teaser-contact .person-contact-separator{
-		display:none;
-		}
+    .person-view-mode-teaser-contact .person-contact-info-item{
+        display:block;
+        font-size:85%;
+    }
+    .person-view-mode-teaser-contact .person-contact-separator{
+        display:none;
+        }
 }
